@@ -27,4 +27,3 @@ set auto_index(::rivet::parray_table) [list source [file join $dir parray_table.
 set auto_index(::rivet::load_cookies) [list source [file join $dir load_cookies.tcl]]
 set auto_index(::rivet::http_accept) [list source [file join $dir http_accept.tcl]]
 set auto_index(::rivet::xml) [list source [file join $dir xml.tcl]]
-set auto_index(::rivet::lassign_array) [list source [file join $dir lassign_array.tcl]]
